# hyperspectral_super-resolution

./: .gitignore  EMIT_experiments.ipynb  EMIT_workflow_example.ipynb  Pairs_EMIT_S2_demo (3).ipynb  Pairs_EMIT_S2_demo-2.ipynb  README.md  __init__.py  hyperres_demo.ipynb  requirements.txt  s2_utils.py
EMIT_data/: EMIT_utils.py  __init__.py  emit_proj.py  emit_tools.py  geo.py  viz.py
color_band_utils/: pyproject.toml
color_band_utils/s2_emit/: __init__.py  poly_regression.py  srf.py  synth.py  viz.py
documentation/: __init__.py  pairs_artifacts.py
legacy_notebooks/: Spectral_matching.ipynb  comb_exps.ipynb
s2_data/: cloud_utils.py  s2_utils.py
s2_emit/: __init__.py  arosics_coreg.py  color.py  emit_io.py  synth.py  viz.py
tiles_helpers/: __init__.py  utils.py
