[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2-emit-demo"
version = "0.1.0"
description = "EMIT -> pseudo Sentinel-2 synthesis + visualization + color matching"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "rasterio",
  "opencv-python",
  "matplotlib",
  "h5py",
  "spectral",
  "POT"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["s2_emit*"]
